--- a/src/Todo/style.css
+++ b/src/Todo/style.css
@@ -1,4 +1,4 @@
 body{
     background: linear-gradient(rgb(65, 45, 65), rgb(135, 135, 192),rgb(59, 59, 88), rgb(170, 162, 177)) fixed;
-    color:aliceblue
+    color:rgb(250, 250, 250)
 }  
